src/styles.css
html {
  scroll-behavior: smooth;
}

* {
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
  overflow: hidden;
  -webkit-touch-callout: none;
}

.container {
  display: flex;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  padding-right: 0;
  padding-left: 0;
}

/* Left Sidebar */
.left {
  height: 100%;
  width: 20%;
  position: absolute;
  left: 0;
  top: 0;
  padding-top: 5px;
  background-color: #fff;
  border-left: none;
  border-right: 1px solid #dcdcde;
  display: flex;
  flex-direction: column;
  flex-shrink: 0;
  transition: transform 200ms ease-in-out;
}

/* Main area */
.right {
  width: 80%;
  font-size: 18px;
  height: 100%;
  display: flex;
  flex-direction: column;
  flex-shrink: 0;
  position: absolute;
  right: 0;
}

.right-row {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  width: 100%;
  height: 100%;
}

/* Cennter any element */
.center {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.nav-bar-left {
  position: relative;
  border-bottom: 1px solid #eee;
  border-top: none;
  height: 50px;
  background-color: #fff;
  width: 100%;
}

.center {
  display: flex;
  align-items: center;
  justify-content: center;
}

/* Navbar */
.nav-bar {
  padding: 8px;
  margin: 0 auto;
  max-width: 1440px;
  /* border: 1px solid #eee; */
  border-bottom: 1px solid #eee;
  border-top: none;
  height: 50px;
  background-color: #fff;
  width: 100%;
}

.footer-bar {
  padding: 8px;
  margin: 0 auto;
  max-width: 1440px;
  border-top: 1px solid #eee;
  height: 53px;
  background-color: #fff;
  width: 100%;
}

.hidden {
  display: none;
}

/* Navbar icons - Left  */
.nav-left-icon {
  padding: 5px 7px;
  display: inline-flex;
  width: 100%;
  align-items: center;
  justify-content: space-between;
  position: relative;
  bottom: 0px;
}

/* Search Bar */
.search-bar {
  background-color: #ced9f2;
  border-bottom: 1px solid #dcdcde;
  display: flex;
}

/* Search button */
.searchButton {
  padding: 22px;
  border: none;
  color: #646970;
  background-color: #fff;
  cursor: pointer;
  font-size: 1.3rem;
  outline: none;
  display: flex;
  align-items: center;
  justify-content: center;
}

/* Search Input fieled */
.search-field {
  width: 100%;
  border: none;
  outline: none;
  padding: 20px;
  font-size: medium;
}

/* Note List Container*/
.note-list {
  padding-left: 15px;
  overflow-x: hidden;
  overflow-y: scroll;
  padding-bottom: 0;
  height: calc(100% - 162.5px);
}

/* Note List item */
.note-list-item {
  height: 60px;
  padding: 10px 20px 0 25px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  margin: 0 4px;
  cursor: pointer;
  font-size: 16px;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
}

ul,
ol {
  padding-left: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.note-list-item-hover {
  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.11), 0 5px 5px rgba(0, 0, 0, 0.12);
}

.note-list-item-prev {
  background: #f6f5f5;
}

/* Highlight Clicked note item */
.note-list-item-clicked {
  background: #ced9f2;
  transition: 0.3s;
}

.sort-order-selector {
  position: absolute;
  width: 100%;
  height: 50px;
  line-height: 44px;
  border-top: 1px solid #dcdcde;
  margin: 0;
  padding: 0 24px 0 24px;
  font-size: 14px;
  bottom: 0;
}

.backupbtn {
  float: right;
}

.right-bottom-bar {
  height: 50px;
  line-height: 44px;
  border-top: 1px solid #dcdcde;
  margin: 0;
  font-size: 14px;
  max-width: 1440px;
  margin: 0 auto;
}

.sort-order-selector option {
  font-weight: normal;
  color: #000;
}

.sort-order-selector select {
  appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  border: none;
  padding: 0 5px;
  margin: 0;
  font-weight: 500;
  background-color: transparent;
  cursor: pointer;
}

/* Cancel Icon inside search input */
input[type="search"]::-webkit-search-cancel-button {
  -webkit-appearance: searchfield-cancel-button;
}

/* Common button formatter*/
.btn {
  border: none;
  outline: none;
  cursor: pointer;
  margin: 2px;
  background-color: #fff;
  color: #777;
  font-size: 1.5rem;
}

.btn-save-cancel {
  /* border: none; */
  outline: none;
  background-color: #fff;
  cursor: pointer;
  margin: 2px;
  color: #777;
  font-weight: 200;
  /* border: 1px solid #dcdcde; */
  padding: 10px;
  font-size: 1.8em;
  font-family: "Font Awesome 5 Free", -apple-system, BlinkMacSystemFont,
    "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue",
    sans-serif;
}

.btn-save-cancel:hover {
  color: #24292e;
  background-color: #eff3f6;
  background-image: linear-gradient(-180deg, #fafbfc 0%, #eff3f6 90%);
}

button {
  outline: none;
  border: none;
  background-color: #fff;
}
/* Boostrap CSS */
h1 {
  font-size: 4.5rem;
  font-weight: 350;
  line-height: 1.2;
}

h2 {
  font-size: 3.5rem;
  font-weight: 350;
  line-height: 1.2;
}

h3 {
  font-size: 3rem;
  font-weight: 350;
  line-height: 1.2;
}

.markdown-body p {
  font-weight: 350;
}

.markdown-body h1 {
  font-weight: 400;
}

.markdown-body h2,
.markdown-body h3,
.markdown-body h4,
.markdown-body h5,
.markdown-body h6 {
  font-weight: 500;
}

.main {
  max-width: 1440px;
  margin: 0 auto;
  width: 100%;
  padding: 50px 150px;
  overflow-y: scroll;
  /* border: 1px solid #eee; */
  border-bottom: none;
  border-top: none;
  height: calc(100% - 50px);
  display: flex;
  flex-direction: column;
}

.main-editor {
  padding-left: 5px;
  padding-right: 1px;
  height: 100%;
  display: flex;
  flex-direction: column;
  position: relative;
}

::-webkit-scrollbar-thumb {
  background: #c3c4c7;
  border-radius: 100px;
  border: 4px solid #fff;
  min-height: 24px;
}

.title-header {
  margin: 0 auto;
  display: flex;
  max-width: 1440px;
  width: 100%;
  flex-direction: column;
  font-size: x-large;
}

.page-header {
  padding-bottom: 9px;
  margin: 5px 0 20px;
  border-bottom: 1px solid #eee;
}

#notetitle {
  height: 50px;
  padding: 40px 20px;
  border: none;
  background-color: #1212;
  border-bottom: 1px solid #dcdcde;
  border-radius: 5px;
}

/* Editor Textarea */

.texteditor {
  display: flex;
  flex-direction: column;
  max-width: 1440px;
  margin: 0 auto;
  width: 100%;
  font-size: 16px;
  font-weight: 400;
  overflow: auto;
  line-height: 1.45;
  border-radius: 0;
  resize: none;
  box-shadow: none;
  border: none;
  /* border-top: 1px solid #dcdcde; */
  /* border-right: 1px solid #dcdcde; */
  /* border-left: 1px solid #dcdcde; */
  font-family: -apple-system, "Segoe UI", "Roboto", "Oxygen-Sans", "Ubuntu",
    "Cantarell", "Helvetica Neue", sans-serif, sans-serif;
  height: calc(100% - 50px);
}

.md-txtarea {
  height: inherit;
}

/* Editor Tools */
.md-editor-tools {
  max-width: 1440px;
  width: 100%;
  margin: 0 auto;
  border: none;
  /* border-right: 1px solid #dcdcde;
  border-left: 1px solid #dcdcde; */
  border-bottom: 1px solid #dcdcde;
  /* display: flex; */
  padding: 10px;
}

.saveCancelBar {
  margin: 0 auto;
  display: flex;
  max-width: 1440px;
  width: 100%;
  justify-content: space-between;
  padding-right: 30px;
  padding-left: 30px;
}

.md-buttons {
  border: none;
  outline: none;
  background-color: #fff;
  cursor: pointer;
  margin: 2px;
  color: #777;
  margin: 1px;
  height: 40px;
  width: 40px;
}

.md-editor {
  height: inherit;
  position: relative;
}

.md-editor-tools button:disabled,
button[disabled] {
  /* border: 1px solid #999999; */
  background-color: #cccccc;
  color: #666666;
}

.md-editor-tools button:disabled:hover,
button[disabled]:hover {
  /* border: 1px solid #999999; */
  background-color: #cccccc;
  color: #666666;
}

.notebody-view {
  margin-top: 10px;
}

#notetitle-view {
  color: #24292e;
}

/* Style scrollbar */
::-webkit-scrollbar-thumb {
  background: #c3c4c7;
  border-radius: 100px;
  border: 4px solid #fff;
  min-height: 24px;
}

::-webkit-scrollbar-corner {
  background: transparent;
}

::-webkit-scrollbar {
  width: 14px;
  background: transparent;
}

.highlight {
  background-color: yellow;
}

/*  Copy Code block button */

.copy-code-button {
  color: #272822;
  background-color: #fff;
  border-color: #272822;
  border: 1px solid rgba(27, 31, 35, 0.2);
  border-radius: 3px 3px 0px 0px;

  /* right-align */
  display: block;
  margin-left: auto;
  margin-right: 0;

  margin-bottom: -2px;
  padding: 3px 8px;
  font-size: 0.8em;
}

.copy-code-button:hover {
  cursor: pointer;
  background-color: #f2f2f2;
}

.copy-code-button:focus {
  /* Avoid an ugly focus outline on click in Chrome,
       but darken the button for accessibility.
       See https://stackoverflow.com/a/25298082/1481479 */
  background-color: #e6e6e6;
  outline: 0;
}

.copy-code-button:active {
  background-color: #d9d9d9;
}

.highlight pre {
  /* Avoid pushing up the copy buttons. */
  margin: 0;
}

/* Hide scrollbar for Chrome, Safari and Opera */
.scrollbar::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.scrollbar {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}
.md_btn {
  border: none;
  outline: none;
  cursor: pointer;
  margin: 2px;
  background-color: #fff;
  color: #5c5c5c;
  font-size: 1.5rem;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  padding: 6px 12px;
}

.tooltiptext {
  visibility: hidden;
  width: 120px;
  background-color: #555;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 5px 0;
  position: absolute;
  z-index: 1;
  bottom: 125%;
  left: 50%;
  margin-left: -60px;
  opacity: 0;
  transition: opacity 0.3s;
  font-family: "-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji";
}

.tooltiptext::after {
  content: "";
  position: absolute;
  top: 100%;
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: #555 transparent transparent transparent;
}

.md_btn:hover .tooltiptext {
  visibility: visible;
  opacity: 1;
}

.md_btn:hover {
  opacity: 0.6;
  font-size: 1.55rem;
}

